--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mayu Imanaka's Portfolio",
+  "name": "Mayu",
   "private": true,
   "description": "My portfolio",
   "version": "0.1.0",
@@ -8,6 +8,7 @@
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-netlify": "^2.1.32",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
