--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.28",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.53",
     "gatsby-transformer-sharp": "^2.3.13",
     "gsap": "^3.1.1",
     "node-sass": "^4.13.1",
