--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-reveal": "^1.2.2",
     "smooth-scrollbar": "^8.5.1"
   },
   "devDependencies": {
